# QuTree

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CMakeLists.txt_bk  Dockerfile  JacobiRotationFramework.cpp  LICENSE.txt  Lanzcos.h  Matrix.h  Matrix_Implementation.h  QDlibConfig.cmake.in  QuTreeConfig.cmake.in  README.md  README_INSTALL.txt  SimultaneousDiagonalization.h  TemplateInstantiations_2.cpp  TensorDim.cpp  TensorDim.h  TensorDim_Extension.cpp  Tensor_Extension.h  Tensor_Extension_Implementation.h  Tensor_Implementation.h  Tensorold.h  TreeNode.h  Vector.h  Vector_Implementation.h  long_integer.cpp  stdafx.cpp  stdafx.h  vectorization.cmake
benchmark/: Benchmark.cpp  Benchmark.h  Benchmarker.cpp  Benchmarker.h  CMakeLists.txt  benchmark_tensor.cpp  benchmark_tensor.h  benchmarks.cpp
contrib/Hamiltonians/: CMakeLists.txt  Hamiltonian_parser.cpp  Hamiltonian_parser.h  Hamiltonians.cpp  Hamiltonians.h  yaml_extension.h
contrib/mctdh/: CMakeLists.txt  main.cpp  mctdh.cpp  mctdh.h  mctdh_state.h  yaml_extension.cpp
contrib/qvm/: CMakeLists.txt  GoTo.h  IfElse.cpp  Label.h  Measurements.h  NumberTheory.cpp  QVM.cpp  QVMParameters.h  QVMState.h  QuantumInstruction.cpp  RandomProjectorInstruction.cpp
examples/: CMakeLists.txt  demo.cpp  example_1.cpp  example_2.cpp  example_3.cpp  multilayer_example.cpp  supervised_learning.cpp
examples/mctdh/: CoupledHarmonicOscillator.128.4.4.yaml  ch3.yaml  coupledHO.32.yaml  coupledHO.4.yaml  nocl.cdvr.yaml  nocl.sop.yaml  portfolioOptimization.nasdaq.25.yaml  tickers.csv
examples/qvm/: 2DRandomCircuit.BalancedTree.yaml  2DRandomCircuit.HybridTree.yaml  2DRandomCircuit.MPS.14-13-13-14.yaml  2DRandomCircuit.MPS.18-9-9-18.yaml  2DRandomCircuit.Tucker.yaml
include/: CMakeLists.txt  Check.h  FFT.h  FactorMatrix.h  Graph.h  GraphFactory.h  JacobiRotationFramework.h  Matrix.h  Matrix_Implementation.h  MultiIndex.h  Operator.h  OperatorFactory.h  QDlib.h  QuTree.h  SimultaneousDiagonalization.h  SingleParticleOperator.h  Tensor.h  TensorDim.h  TensorNetwork.h  Tensor_Extension_Implementation.h  Tensor_Implementation.h  Tree.h  TreeNode.h  Vector.h  arithmetics.h  long_integer.h  stdafx.h
include/Applications/: ApplyFirstOrder.h  CMFIntegrator.h  Eigenstates.h  SCF.h  TreeApplyOperator.h  TreeApplyOperatorDynamic.h
include/Core/: BS_integrator.h  DoubleParticleOperator.h  FFT.h  FFTCooleyTukey.h  FactorMatrix.h  JacobiRotationFramework.h  Matrix.h  Matrix_Extension.h  Matrix_Extension_Implementation.h  Matrix_Implementation.h  RandomMatrices.h  SimultaneousDiagonalization.h  Tensor.h  TensorBLAS.h  TensorBLAS1.h  TensorDim.h  TensorDim_Extension.h  TensorMath.h  TensorShape.h  Tensor_Extension.h  Tensor_Extension_Implementation.h  Tensor_Functions_Implementation.h  Tensor_Implementation.h  TreeNode.h  Vector.h  Vector_Implementation.h  WeightedSimultaneousDiagonalization.h  long_integer.h  stdafx.h
include/DVR/: CDVR.h  DeltaVTree.h  GridRepresentation.h  MatrixTensorTree.h  SymXMatrixTrees.h  TDDVR.h  TreeGrids.h  XMatrixTrees.h  cdvr_functions.h
include/Operator/: CoordinateTransformation.h  LeafMatrix.h  ProductOperator.h  SumOfProductsOperator.h  SumOfProductsOperator.hpp  SumOfProductsOperator_Implementation.h
include/Operators/: LeafFunction.h  LeafMatrix.h  LeafOperator.h  MultiLeafOperator.h  MultiParticleOperator.h  PotentialOperator.h  SOPVector.h  SingleParticleOperator.h  SingleParticleOperatorFunction.h  SingleParticleOperatorMatrix.h  SumOfProductsOperator.h
include/Tensor/: Core.h  SVD.h  Tensor  Tensor.h  TensorBLAS1.h  TensorBLAS2.h  TensorLapack.h  Tensor_Functions.h  Tensor_Implementation.h  rng.h
include/TensorNetwork/: DotProduct.h  MatrixTree.h  SubTreeAttribute.h  TensorTree.h  TensorTreeFactory.h  TreeAttribute.h  contractions.h
include/TensorTree/: AbstractNode.h  DenseOverlap.h  FactorMatrixTree.h  HHoleMatrices.h  HMatrices.h  HoleMatrixTree.h  HoleOverlap.h  Leaf.h  LinearizedLeaves.h  Node.h  NodePosition.h  SparseTreeStructuredObject.h  TensorTree.h  TensorTreeBasis.h  TensorTree_Implementation.h  TreeMarker.h  TreeStructuredObject.h
include/TensorTreeBasis/: Leaf.h  LinearizedLeaves.h  Node.h  NodePosition.h  TTBasisFactory.h  TensorTreeBasis.h
include/Tree/: DenseOverlap.h  Edge.h  EdgeArray.h  FactorMatrixTree.h  HoleMatrixTree.h  HoleOverlap.h  IOTree.h  Leaf.h  LeafArray.h  MatrixTree.h  MatrixTreeFunctions.h  MatrixTreeFunctions_Implementation.h  MatrixTreeManager.h  Node.h  NodeArray.h  NodeAttribute.h  NodePosition.h  SparseFactorMatrixTree.h  SparseHoleMatrixTree.h  SparseMatrixTree.h  SparseMatrixTreeFunctions.cpp  SparseMatrixTreeFunctions.h  SparseMatrixTreeFunctions_Implementation.h  SparseTree.h  SubTree.h  (+11 more)
src/: CMakeLists.txt  FFT.cpp  FactorMatrix_Instantiations.cpp  Graph.cpp  GraphFactory.cpp  JacobiRotationFramework.cpp  Matrix_Instantiations.cpp  Operator.cpp  OperatorFactory.cpp  QuTree.h  SimultaneousDiagonalization.cpp  TemplateInstantiations_1.cpp  TemplateInstantiations_2.cpp  TensorDim.cpp  TensorNetwork.cpp  Tensor_Extension_Instantiations.cpp  Tensor_Instantiations.cpp  Vector_Instantiations.cpp  arithmetics.cpp  blas_queue.h  main.cpp  stdafx.cpp  stdafx.h  testcuda.cu
tests/: CMakeLists.txt  SparseMatrixTree.cpp  Tensor_test_1.cpp  Tensor_test_1.h  graph_util.cpp  graph_util.h  test_.FactorMatrixTree.cpp  test_Core.cpp  test_FactorMatrixTree.cpp  test_GradientDescent.cpp  test_Graph.cpp  test_GraphFactory.cpp  test_HMatrices.cpp  test_HoleMatrixTree.cpp  test_Integrator.cpp  test_LinearizedSCFNodes.cpp  test_Matrix.cpp  test_MatrixBLAS.cpp  test_MatrixListTree.cpp  test_MatrixTensorTree.cpp  test_MatrixTree.cpp  test_Node.cpp  test_Operator.cpp  test_OperatorFactory.cpp  test_Operators.cpp  test_PrimitiveBasis.cpp  test_RandomMatrices.cpp  test_SparseFactorMatrixTree.cpp  test_SparseMatrixTree.cpp  test_SparseTree.cpp  test_SymTensorTree.cpp  test_SymmetricSCF.cpp  test_Tensor.cpp  test_TensorBLAS.cpp  test_TensorBLAS1.cpp  test_TensorBLAS2.cpp  test_TensorLapack.cpp  test_TensorNetwork.cpp  test_TensorOperatorTree.cpp  test_TensorTree.cpp  (+10 more)
(+848 files in other folders)
